packages/jsii/test/negatives/neg.method-name.3.ts
export class MyClass {
  public getFoo() {
    return 'hi';
  }
}
